# marcus-py

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_bot.py
src/quant_signal_sdk/: __init__.py  ccxt_client.py  client.py  models.py  network.py  signing.py  strategy.py
src/quant_signal_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py  test_contract_compatibility_sdk.py  test_models.py  test_quant_signal_sdk.py  test_strategy.py
tests/fixtures/contracts/: sdk_signal_payload_v1.json  sdk_signature_vector_v1.json
