[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-signal-sdk"
version = "0.1.0"
description = "Developer SDK for validating and publishing trading signals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3.0",
  "requests>=2.32,<3.0",
  "urllib3>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-mock>=3.10",
  "pyright>=1.1",
  "build>=1.0",
  "twine>=4.0",
]

market-data = [
  "ccxt>=4.0,<6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]
